src/test/resources/outputs/output_empty.txt
/tmp/exercise/src/test/scala/ExampleEmptyFileTest.scala:7: error: not found: value Leap
    Leap.leapYear(2015) should be (false)
    ^
/tmp/exercise/src/test/scala/ExampleEmptyFileTest.scala:12: error: not found: value Leap
    Leap.leapYear(1996) should be (true)
    ^
/tmp/exercise/src/test/scala/ExampleEmptyFileTest.scala:17: error: not found: value Leap
    Leap.leapYear(2100) should be (false)
    ^
/tmp/exercise/src/test/scala/ExampleEmptyFileTest.scala:22: error: not found: value Leap
    Leap.leapYear(2000) should be (true)
    ^
4 errors
